# shards-commands

./: README.md  pyproject.toml
src/shards/commands/: __about__.py  base.py
tests/: test_commands_base.py  test_commands_cli_handler.py
tests/_commands/: index.py
